Time: 27 ms (94.54%) | Memory: 50 MB (33.95%) - LeetSync